# rs-soroban-cortex

./: Cargo.toml  README.md
core/: Cargo.toml  README.md  TODO.md
core/src/: lib.rs  messaging.rs  node.rs  node_deprecated.rs  rpc.rs  utils.rs
core/src/chains_test_types/: README.md  ethereum.rs  mod.rs  soroban_events_stream.rs
core/src/config/: bridge.rs  generic.rs  mod.rs  soroban.rs  soroban_events_stream.rs  state_watcher.rs
core/src/node/: bridge.rs  generic.rs  mod.rs  soroban_events_stream.rs  soroban_stream.rs
core/src/node/soroban/: events_stream.rs  mod.rs  state_watcher.rs
cross-chain-bridge/: README.md
cross-chain-bridge/ethereum/src/: logger.rs
cross-chain-bridge/soroban/: Cargo.toml  README.md
cross-chain-bridge/soroban/src/: contract.rs  test.rs
eth-bridge/ethereum/src/: lib.rs
eth-bridge/soroban/src/: storage.rs  types.rs
ethereum/: Cargo.toml  README.md
ethereum/src/: conversions.rs  logger.rs
examples/: Cargo.toml
examples/src/: lib.rs  unpackaged.rs  unpackaged_dynamic.rs
ingest/: Cargo.toml  README.md
ingest/src/: captive_core.rs  core_runner.rs
soroban/: Cargo.toml
soroban-events-streaming-node/: Cargo.toml  README.md
soroban-events-streaming-node/src/: lib.rs
soroban/src/: contract.rs  lib.rs  storage.rs  test.rs  types.rs
test_contracts/simple_log/: Cargo.toml
test_contracts/simple_log/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs
