[workspace]
resolver = "2"
members = [ 
    "core",
    "soroban" 
    ]

[workspace.package]
version = "0.1.0"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true


[workspace.dependencies.soroban-sdk]
version = "0.8.4"


[workspace.dependencies.bytes]
version = "1"


[workspace.dependencies.soroban-env-host]
version = "0.0.16"
git = "https://github.com/stellar/rs-soroban-env"
rev = "0c0cae6fa22b751e7fd95d7ce7556ac6d7b7010e"


[workspace.dependencies]
stellar-strkey = "0.0.7"
