[workspace]
resolver = "2"
members = [ 
    "core",
    "examples",
    "soroban-events-streaming-node",
    "eth-bridge/soroban",
    "eth-bridge/ethereum",
    "test_contracts/simple_log",
]

[workspace.package]
version = "0.1.0"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true


[workspace.dependencies.soroban-sdk]
version = "0.9.2"


[workspace.dependencies.bytes]
version = "1"

[workspace.dependencies.soroban-env-host]
version = "0.0.17"
git = "https://github.com/stellar/rs-soroban-env"
rev = "400d806387140553e4e685d232deb3a807ec0e36"

[workspace.dependencies]
stellar-strkey = "0.0.7"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
web3 = "0.19.0"
hex-literal = "0.4.1"
futures = "0.3.28"
log = "0.4.19"
env_logger = "0.10.0"
chrono = "0.4.26"
async-trait = "0.1.68"
clap = "4.3.10"
stellar-xdr = { version = "0.0.17" }
soroban-cortex-core = { path = "./core/", default-features = false }
