[package]
name = "multichain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
stellar-strkey = { workspace = true }    
soroban-env-host = { workspace = true }    
tokio = { workspace = true }
tokio-test = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
web3 = { workspace = true }
hex-literal = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

jsonrpsee-http-client = "0.18.2"
jsonrpsee-core = "0.18.2"
serde_json = "1.0"
serde = "1.0.82"
serde-aux = "4.1.2"
soroban-cli= { git = "https://github.com/stellar/soroban-tools/", rev="6bdd01a190e30805955fba11c60eed4aa452387c"}
ed25519-dalek = "1.0.1"


[features]

# By default the core serves to bridge a generic chain to soroban. 

default = ["full"]

# Feature for nodes that want full bridge and soroban rpc functionality.
full = ["bridge", "soroban_events_stream"]

# Feature for nodes that only want to listen to events and return a stream
stream_only = ["soroban_events_stream"]

# To only have a node that listens for events, import core without `build`.
bridge = []


# Enables the node to listen for Soroban events.
# Some nodes might want this deactivated to keep their functionality only 
# to bridge a message from a generic chain to Soroban without any callback.
soroban_events_stream = []


