[package]
name = "ethereum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
stellar-strkey = { workspace = true }    
soroban-env-host = { workspace = true }    
tokio = { workspace = true }
tokio-test = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
web3 = { workspace = true }
hex-literal = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

multichain-core = { workspace = true }
