[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
soroban-cortex-core = { path = "../core/", default-features = false, features = ["packaged"] }
stellar-xdr = { workspace = true, default-features = false, features=["next", "base64"] }
stellar-strkey = {workspace = true}
ed25519-dalek = "1.0.1"
futures = { workspace = true }

