[package]
name = "ingest"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.22"
stellar-xdr = { version = "0.0.17", features = ["std", "curr", "next", "base64", "serde"] }
base64 = "0.21.2"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.89"
thiserror = { version = "1.0.37"}
os_pipe = "1.1.4"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
