[package]
name = "simple-log"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
soroban-sdk = { version = "0.9.2" }

[dev_dependencies]
soroban-sdk = { version = "0.9.2", features=["testutils"] }
